--- a/back/package.json
+++ b/back/package.json
@@ -30,8 +30,10 @@
     "jsonwebtoken": "^8.5.1",
     "pino": "^6.13.0",
     "pino-pretty": "^5.1.3",
+    "pg": "^8.7.1",
     "redact-object": "^3.0.1",
     "sanitize-html": "^2.4.0",
+    "typeorm": "^0.2.37",
     "uuid": "^8.3.2",
     "uuid-validate": "^0.0.3"
   },
