--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,6 @@ include:
 .default_rule: &default_rule
   if: '$CI_COMMIT_BRANCH =~ /^feature|^fix|^hotfix|^bugfix|^release|^snyk-fix/'
 
-before_script:
-  - yarn i -g firebase-tools
-
 stages:
   - test
   - prepare
@@ -43,7 +40,6 @@ check:test-back:
   services:
     - name: postgres:13.4
       alias: e2e-test-db
-      command: ['mysqld', '--sql_mode=ALLOW_INVALID_DATES']
     - name: redis:5.0-alpine
       alias: e2e-test-redis
   script:
@@ -70,6 +66,22 @@ check:lint-back:
     policy: pull
     paths:
       - node_modules/
+  rules:
+    - *default_rule
+    - if: '$CI_COMMIT_BRANCH == "develop"'
+    - if: '$CI_COMMIT_TAG =~ /^v.+/'
+
+deploy:back-prod:
+  image: google/cloud-sdk:352.0.0-slim
+  stage: deploy
+  script:
+    - apt-get update && apt-get install -yqq jq
+    - export PACKAGE_VERSION=$(jq -r .version ./back/package.json | tr . -)
+    - echo $SERVICE_ACCOUNT > ${HOME}/gcloud-service-key.json
+    - gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
+    - cp "$ENV_VARIABLES_BACK_PROD" ./back/env_variables_prod.yaml
+    - cp "$BETA_SETTINGS_BACK_PROD" ./back/beta_settings_prod.yaml
+    - gcloud --project $PROJECT_ID app deploy ./back/app_prod.yaml --version $PACKAGE_VERSION -q --no-promote
   rules:
     - *default_rule
     - if: '$CI_COMMIT_BRANCH == "develop"'
