--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,11 +13,16 @@ stages:
 
 variables:
   AUTH_REDIS_URL: 'redis://e2e-test-redis:6379/0'
+  DB_CACHE_REDIS_URL: 'redis://:redis@e2e-test-redis:6379/0'
   DB_HOST: 'e2e-test-db'
   DB_PORT: 5432
   DB_USERNAME: postgres
   DB_PASSWORD: pass
   DB_DATABASE: postgres
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: pass
+  POSTGRES_DB: postgres
+  PGDATA: /var/lib/postgresql/data/db-files/
 
 install_back_dependencies:
   stage: prepare
