Add Login and Register endpoint

--- a/back/package.json
+++ b/back/package.json
@@ -16,16 +16,23 @@
     "build": "tsc -p ./tsconfig.build.json",
     "gcp-build": "tsc -p ./tsconfig.build.json",
     "lint": "eslint --ext .ts src/ tests/",
-    "lint:fix": "yarn lint --fix"
+    "lint:fix": "yarn lint --fix",
+    "ts-typeorm": "ts-node ./node_modules/.bin/typeorm --config ./src/loader/ormconfig.ts",
+    "migration:generate": "yarn ts-typeorm migration:generate",
+    "migration:run": "yarn ts-typeorm migration:run",
+    "migration:revert": "yarn ts-typeorm migration:revert",
+    "migration:create": "yarn ts-typeorm migration:create -d ./src/migrations/ -n "
   },
   "main": "src/index.ts",
   "keywords": [],
   "dependencies": {
     "@google-cloud/firestore": "^4.14.1",
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
+    "faker": "^5.5.3",
     "ioredis": "^4.27.7",
     "jsonwebtoken": "^8.5.1",
     "pino": "^6.13.0",
@@ -38,9 +45,11 @@
     "uuid-validate": "^0.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-pino-logger": "^4.0.2",
+    "@types/faker": "^5.5.8",
     "@types/hapi__joi": "^17.1.7",
     "@types/ioredis": "^4.26.7",
     "@types/jest": "^27.0.1",
@@ -49,6 +58,7 @@
     "@types/pino": "^6.3.11",
     "@types/sanitize-html": "^2.3.2",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.1",
     "@types/uuid-validate": "^0.0.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
