--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,7 @@ check:test-back:
       alias: e2e-test-redis
   script:
     - cd back
+    - yarn migration:run
     - yarn test
   cache:
     key: ${CI_COMMIT_REF_SLUG}
@@ -88,6 +89,5 @@ deploy:back-prod:
     - cp "$BETA_SETTINGS_BACK_PROD" ./back/beta_settings_prod.yaml
     - gcloud --project $PROJECT_ID app deploy ./back/app_prod.yaml --version $PACKAGE_VERSION -q --no-promote
   rules:
-    - *default_rule
     - if: '$CI_COMMIT_BRANCH == "develop"'
     - if: '$CI_COMMIT_TAG =~ /^v.+/'
