setup refresh token generation and store in redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,10 @@ services:
       DB_USERNAME: postgres
       DB_PASSWORD: pass
       DB_DATABASE: postgres
+      ACCESS_TOKEN_SECRET: lkddsijdief56kdsjsd5ds5csdcdjcjkdlskjGHJEOKDLLKZMMSd6sfd5s4cd4cskdckdsnjfcdssk6966
+      REFRESH_TOKEN_SECRET: r3p67zIY4TlYzTvu1VC6r3mV54545x1j
+      ACCESS_TOKEN_LIFE: 120
+      REFRESH_TOKEN_LIFE: 600
     working_dir: /usr/app
     command: yarn dev
 
@@ -56,6 +60,10 @@ services:
       DB_USERNAME: postgres
       DB_PASSWORD: pass
       DB_DATABASE: postgres
+      ACCESS_TOKEN_SECRET: lkddsijdief56kdsjsd5ds5csdcdjcjkdlskjGHJEOKDLLKZMMSd6sfd5s4cd4cskdckdsnjfcdssk6966
+      REFRESH_TOKEN_SECRET: r3p67zIY4TlYzTvu1VC6r3mV54545x1j
+      ACCESS_TOKEN_LIFE: 120
+      REFRESH_TOKEN_LIFE: 600
     working_dir: /usr/app
     command: yarn dev
 
