--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,10 @@ variables:
   POSTGRES_PASSWORD: pass
   POSTGRES_DB: postgres
   PGDATA: /var/lib/postgresql/data/db-files/
+  ACCESS_TOKEN_SECRET: lkddsijdief56kdsjsd5ds5csdcdjcjkdlskjGHJEOKDLLKZMMSd6sfd5s4cd4cskdckdsnjfcdssk6966
+  REFRESH_TOKEN_SECRET: KDKZMMSd6sfdd4cskdckdsnjfds5csdcdjLcdssk6966lks5f6354dfddlskjGHJEO
+  ACCESS_TOKEN_LIFE: 600
+  REFRESH_TOKEN_LIFE: 600
 
 install_back_dependencies:
   stage: prepare
