--- a/back/package.json
+++ b/back/package.json
@@ -55,6 +55,7 @@
     "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.172",
+    "@types/node": "14.11.1",
     "@types/pino": "^6.3.11",
     "@types/sanitize-html": "^2.3.2",
     "@types/supertest": "^2.0.11",
