--- a/back/package.json
+++ b/back/package.json
@@ -35,6 +35,8 @@
     "faker": "^5.5.3",
     "ioredis": "^4.27.7",
     "jsonwebtoken": "^8.5.1",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "pino": "^6.13.0",
     "pino-pretty": "^5.1.3",
     "pg": "^8.7.1",
@@ -56,6 +58,8 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.172",
     "@types/node": "14.11.1",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
     "@types/pino": "^6.3.11",
     "@types/sanitize-html": "^2.3.2",
     "@types/supertest": "^2.0.11",
