--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,11 @@ services:
       REFRESH_TOKEN_SECRET: r3p67zIY4TlYzTvu1VC6r3mV54545x1j
       ACCESS_TOKEN_LIFE: 120
       REFRESH_TOKEN_LIFE: 600
+      FROM_EMAIL: test@snowpact.com
+      SMTP_ENDPOINT: mailhog-sp-auth
+      SMTP_PORT: 1025
+      SMTP_USERNAME: username
+      SMTP_PASSWORD: password
     working_dir: /usr/app
     command: yarn dev
 
@@ -64,6 +69,11 @@ services:
       REFRESH_TOKEN_SECRET: r3p67zIY4TlYzTvu1VC6r3mV54545x1j
       ACCESS_TOKEN_LIFE: 120
       REFRESH_TOKEN_LIFE: 600
+      FROM_EMAIL: test@snowpact.com
+      SMTP_ENDPOINT: mailhog-sp-auth
+      SMTP_PORT: 1025
+      SMTP_USERNAME: username
+      SMTP_PASSWORD: password
     working_dir: /usr/app
     command: yarn dev
 
@@ -132,6 +142,18 @@ services:
       - backend
     volumes:
       - ./e2e/tmpredisdata:/data
+
+  mailhog-sp-auth:
+    container_name: mailhog-sp-auth
+    image: mailhog/mailhog:v1.0.1
+    restart: always
+    logging:
+      driver: none # disable saving logs
+    networks:
+      - backend
+    ports:
+      - 1025:1025
+      - 8025:8025
 
 networks:
   backend:
