--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,5 +98,5 @@ deploy:back-prod:
     - cp "$BETA_SETTINGS_BACK_PROD" ./back/beta_settings_prod.yaml
     - gcloud --project $PROJECT_ID app deploy ./back/app_prod.yaml --version $PACKAGE_VERSION -q --no-promote
   rules:
-    - if: '$CI_COMMIT_BRANCH == "develop"'
+    - if: '$CI_COMMIT_BRANCH == "master"'
     - if: '$CI_COMMIT_TAG =~ /^v.+/'
